--- a/lostreport.html
+++ b/lostreport.html
@@ -16,7 +16,7 @@
 
   <div class="card">
     <h2>All Submitted Lost Reports</h2>
-    <div id="summary" class="grid-container"></div>
+    <div id="summary" class="grid-container">Loading reports...</div>
     <button id="submitAnother">Submit Another Report</button>
   </div>
 
@@ -25,7 +25,6 @@
     <div class="modal-content">
       <button class="close-btn" id="closeModal">Close</button>
       <div id="modalDetails"></div>
-      <button id="deleteReport" class="delete-btn">Delete Report</button>
     </div>
   </div>
 
@@ -35,60 +34,65 @@ const modal = document.getElementById('reportModal');
 const modalDetails = document.getElementById('modalDetails');
 const closeModalBtn = document.getElementById('closeModal');
 const submitAnother = document.getElementById('submitAnother');
-const deleteReportBtn = document.getElementById('deleteReport');
 
-let reports = JSON.parse(localStorage.getItem('lostReports') || '[]');
+const JSON_URL = "YOUR_JSON_WEBAPP_URL"; // <-- ilagay dito ang Apps Script Web App URL na may doGet()
+
+let reports = [];
 let activeReportIndex = null;
 
-function saveReports() {
-  localStorage.setItem('lostReports', JSON.stringify(reports));
-  location.reload();
-}
+// Fetch reports from Apps Script Web App
+async function loadReports() {
+  try {
+    const res = await fetch(JSON_URL);
+    reports = await res.json();
 
-if(reports.length === 0){
-  summaryDiv.innerHTML = "<p>No reports submitted yet.</p>";
-} else {
-  reports.forEach((data, idx) => {
-    const card = document.createElement('div');
-    card.className = 'report-card';
-    card.innerHTML = `<div class="report-title">Report #${idx+1}</div>
-                      <div class="report-summary">${data.what || 'No description'}</div>`;
-    
-    card.addEventListener('click', () => {
-      activeReportIndex = idx;
+    if(reports.length === 0){
+      summaryDiv.innerHTML = "<p>No reports submitted yet.</p>";
+      return;
+    }
 
-      // Show modal
-      let html = `<h3>Report #${idx+1}</h3><ul>`;
-      for(const key in data){
-        if(key === 'photo'){
-          html += `<li><strong>Photo:</strong><br><img src="${data[key]}" style="max-width:300px;border:2px solid #13007d;border-radius:8px;"></li>`;
-        } else {
-          html += `<li><strong>${key}:</strong> ${data[key]}</li>`;
+    summaryDiv.innerHTML = "";
+    reports.forEach((data, idx) => {
+      const card = document.createElement('div');
+      card.className = 'report-card';
+      card.innerHTML = `<div class="report-title">Report #${idx+1}</div>
+                        <div class="report-summary">${data.What || 'No description'}</div>`;
+      
+      card.addEventListener('click', () => {
+        activeReportIndex = idx;
+
+        // Show modal with full details
+        let html = `<h3>Report #${idx+1}</h3><ul>`;
+        for(const key in data){
+          if(key === 'Photo URL' && data[key]){
+            html += `<li><strong>Photo:</strong><br><img src="${data[key]}" style="max-width:300px;border:2px solid #13007d;border-radius:8px;"></li>`;
+          } else {
+            html += `<li><strong>${key}:</strong> ${data[key]}</li>`;
+          }
         }
-      }
-      html += "</ul>";
-      modalDetails.innerHTML = html;
-      modal.style.display = 'flex';
+        html += "</ul>";
+        modalDetails.innerHTML = html;
+        modal.style.display = 'flex';
+      });
+
+      summaryDiv.appendChild(card);
     });
 
-    summaryDiv.appendChild(card);
-  });
+  } catch(err) {
+    console.error("Error loading reports:", err);
+    summaryDiv.innerHTML = "<p>Error loading reports. Try again later.</p>";
+  }
 }
 
 // Close modal
 closeModalBtn.addEventListener('click', () => modal.style.display = 'none');
 window.addEventListener('click', e => { if(e.target === modal) modal.style.display = 'none'; });
 
-// Delete report from modal
-deleteReportBtn.addEventListener('click', () => {
-  if(activeReportIndex !== null && confirm("Are you sure you want to delete this report?")) {
-    reports.splice(activeReportIndex, 1);
-    saveReports();
-  }
-});
-
 // Submit another report
 submitAnother.addEventListener('click', () => window.location.href = 'index.html');
+
+// Load reports on page load
+loadReports();
 </script>
 </body>
 </html>
