--- a/lostreport.html
+++ b/lostreport.html
@@ -35,7 +35,7 @@ const modalDetails = document.getElementById('modalDetails');
 const closeModalBtn = document.getElementById('closeModal');
 const submitAnother = document.getElementById('submitAnother');
 
-const JSON_URL = "YOUR_JSON_WEBAPP_URL"; // <-- ilagay dito ang Apps Script Web App URL na may doGet()
+const JSON_URL = "https://script.google.com/macros/s/AKfycbzjI3Vjm-4o8nepc_9OEL4juGtggIH8qzVstIgLY1zS2whH1QyodQdpMQVw0HZbO2pn/exec"; // <-- ilagay dito ang Apps Script Web App URL na may doGet()
 
 let reports = [];
 let activeReportIndex = null;
@@ -96,3 +96,4 @@ loadReports();
 </script>
 </body>
 </html>
+
