--- a/lostreport.html
+++ b/lostreport.html
@@ -51,7 +51,7 @@ const modalDetails = document.getElementById('modalDetails');
 const closeModalBtn = document.getElementById('closeModal');
 const submitAnother = document.getElementById('submitAnother');
 
-const JSON_URL = "YOUR_JSON_WEBAPP_URL"; // <-- ilagay dito Apps Script Web App URL
+const JSON_URL = "https://script.google.com/macros/s/AKfycby5459lPn0PQ5bJlf7Om86cbSQPiVNIsOmmS4d4CMF-9xwQLqUCE8qDXiNWgyIqXOqh/exec"; // <-- ilagay dito Apps Script Web App URL
 
 let reports = [];
 
@@ -118,3 +118,4 @@ loadReports();
 
 </body>
 </html>
+
