--- a/lostreport.html
+++ b/lostreport.html
@@ -2,15 +2,20 @@
 <html>
 <head>
   <title>Lost Reports - Bravehearts Lost & Found</title>
+  <link rel="stylesheet" href="lostreport.css">
   <style>
-    body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0; }
-    .card { background:white; max-width:900px; margin:50px auto; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2); }
+    body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0;}
+    .card { background:white; max-width:900px; margin:50px auto; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);}
+    h2 { text-align:center; color:#13007d; }
     .grid-container { display:grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap:15px; margin-top:20px; }
-    .report-card { background:#f9f9f9; border:1px solid #ccc; border-radius:8px; padding:10px; cursor:pointer; }
-    .report-card img { max-width:100%; border:2px solid #13007d; border-radius:8px; margin-top:5px; }
+    .report-card { background:#f9f9f9; border:1px solid #ccc; border-radius:8px; padding:10px; cursor:pointer; transition:0.2s; }
+    .report-card:hover { box-shadow:0 0 10px rgba(0,0,0,0.2); }
+    .report-title { font-weight:bold; color:#13007d; }
     .modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; }
     .modal-content { background:white; padding:20px; border-radius:12px; max-width:600px; max-height:80%; overflow-y:auto; position:relative; }
     .close-btn { position:absolute; top:10px; right:10px; padding:6px 12px; border:none; border-radius:6px; background:#13007d; color:white; cursor:pointer; }
+    .modal img { max-width:100%; margin-top:10px; border:2px solid #13007d; border-radius:8px; }
+    #submitAnother { margin-top:15px; padding:12px 20px; border:none; border-radius:8px; background:#13007d; color:white; font-weight:bold; cursor:pointer; }
   </style>
 </head>
 <body>
@@ -18,6 +23,7 @@
 <div class="card">
   <h2>All Submitted Lost Reports</h2>
   <div id="summary" class="grid-container">Loading reports...</div>
+  <button id="submitAnother">Submit Another Report</button>
 </div>
 
 <div id="reportModal" class="modal">
@@ -32,12 +38,13 @@ const summaryDiv = document.getElementById('summary');
 const modal = document.getElementById('reportModal');
 const modalDetails = document.getElementById('modalDetails');
 const closeModalBtn = document.getElementById('closeModal');
+const submitAnother = document.getElementById('submitAnother');
 
-const JSON_URL = "https://script.google.com/macros/s/AKfycbwOnt8siTTBwOb9ffsVcVm7-E9OHnIZA4E9vDRpkYhhB9tte1QcLWA5SoOKZ9YTz8P8/exec"; // replace with your deployed Apps Script URL
+const JSON_URL = "https://script.google.com/macros/s/AKfycbzL-RmRF9eo66tZNb1gf0N2oCDUrg6autPT8wW7w76CeDbGhrKyruq_EutSd4JMoLY_/exec"; // <-- Palitan ng Web App URL mo
+
 let reports = [];
 
-// Load reports
-async function loadReports() {
+async function loadReports(){
   try {
     const res = await fetch(JSON_URL);
     reports = await res.json();
@@ -48,25 +55,25 @@ async function loadReports() {
     }
 
     summaryDiv.innerHTML = "";
-    reports.forEach((data, idx) => {
+
+    reports.forEach((data, idx)=>{
       const card = document.createElement('div');
       card.className = 'report-card';
 
-      // If photo exists, generate <img> via Apps Script
-      let imgHTML = "";
+      // Convert photoId to direct image URL
+      let imgHTML = '';
       if(data["Photo ID"]){
         imgHTML = `<img src="${JSON_URL}?imageId=${data["Photo ID"]}" alt="Lost Item">`;
       }
 
-      card.innerHTML = `<div><strong>Report #${idx+1}</strong></div>
-                        <div>${data.What || 'No description'}</div>
+      card.innerHTML = `<div class="report-title">Report #${idx+1}</div>
+                        <div class="report-summary">${data.What || 'No description'}</div>
                         ${imgHTML}`;
 
-      // Click for modal details
-      card.addEventListener('click', () => {
+      card.addEventListener('click', ()=>{
         let html = `<h3>Report #${idx+1}</h3><ul>`;
         for(const key in data){
-          if(key === "Photo ID" && data[key]){
+          if(key==="Photo ID" && data[key]){
             html += `<li><strong>Photo:</strong><br><img src="${JSON_URL}?imageId=${data[key]}" style="max-width:100%;"></li>`;
           } else {
             html += `<li><strong>${key}:</strong> ${data[key]}</li>`;
@@ -79,19 +86,18 @@ async function loadReports() {
 
       summaryDiv.appendChild(card);
     });
+
   } catch(err){
-    summaryDiv.innerHTML = "<p>Error loading reports.</p>";
     console.error(err);
+    summaryDiv.innerHTML = "<p>Error loading reports. Try again later.</p>";
   }
 }
 
-// Close modal
-closeModalBtn.addEventListener('click', () => modal.style.display = 'none');
-window.addEventListener('click', e => { if(e.target === modal) modal.style.display = 'none'; });
+closeModalBtn.addEventListener('click', ()=> modal.style.display='none');
+window.addEventListener('click', e=>{ if(e.target===modal) modal.style.display='none'; });
+submitAnother.addEventListener('click', ()=> window.location.href='index.html');
 
-// Initialize
 loadReports();
 </script>
-
 </body>
 </html>
