--- a/lostreport.html
+++ b/lostreport.html
@@ -5,20 +5,31 @@
   <link rel="stylesheet" href="lostreport.css">
   <style>
     body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0;}
+    .video-background { position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; overflow:hidden; }
+    .video-background video { width:100%; height:100%; object-fit:cover; }
+    .overlay { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.3); z-index:-1; }
     .card { background:white; max-width:900px; margin:50px auto; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);}
     h2 { text-align:center; color:#13007d; }
     .grid-container { display:grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap:15px; margin-top:20px; }
     .report-card { background:#f9f9f9; border:1px solid #ccc; border-radius:8px; padding:10px; cursor:pointer; transition:0.2s; }
     .report-card:hover { box-shadow:0 0 10px rgba(0,0,0,0.2); }
     .report-title { font-weight:bold; color:#13007d; }
+    .report-summary { margin-top:5px; font-size:14px; }
     .modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; }
     .modal-content { background:white; padding:20px; border-radius:12px; max-width:600px; max-height:80%; overflow-y:auto; position:relative; }
     .close-btn { position:absolute; top:10px; right:10px; padding:6px 12px; border:none; border-radius:6px; background:#13007d; color:white; cursor:pointer; }
-    .modal img { max-width:100%; margin-top:10px; border:2px solid #13007d; border-radius:8px; }
     #submitAnother { margin-top:15px; padding:12px 20px; border:none; border-radius:8px; background:#13007d; color:white; font-weight:bold; cursor:pointer; }
+    .view-btn { margin-top:10px; padding:6px 12px; border:none; border-radius:6px; background:#13007d; color:white; cursor:pointer; }
   </style>
 </head>
 <body>
+
+<div class="video-background">
+  <video autoplay muted loop playsinline>
+    <source src="video/FAITH.mp4" type="video/mp4">
+  </video>
+</div>
+<div class="overlay"></div>
 
 <div class="card">
   <h2>All Submitted Lost Reports</h2>
@@ -26,28 +37,16 @@
   <button id="submitAnother">Submit Another Report</button>
 </div>
 
-<div id="reportModal" class="modal">
-  <div class="modal-content">
-    <button class="close-btn" id="closeModal">Close</button>
-    <div id="modalDetails"></div>
-  </div>
-</div>
-
 <script>
 const summaryDiv = document.getElementById('summary');
-const modal = document.getElementById('reportModal');
-const modalDetails = document.getElementById('modalDetails');
-const closeModalBtn = document.getElementById('closeModal');
 const submitAnother = document.getElementById('submitAnother');
 
-const JSON_URL = "https://script.google.com/macros/s/AKfycbzL-RmRF9eo66tZNb1gf0N2oCDUrg6autPT8wW7w76CeDbGhrKyruq_EutSd4JMoLY_/exec"; // <-- Palitan ng Web App URL mo
+const JSON_URL = "YOUR_APPS_SCRIPT_WEB_APP_URL_HERE"; // Palitan ng actual Web App URL
 
-let reports = [];
-
-async function loadReports(){
+async function loadReports() {
   try {
     const res = await fetch(JSON_URL);
-    reports = await res.json();
+    const reports = await res.json();
 
     if(reports.length === 0){
       summaryDiv.innerHTML = "<p>No reports submitted yet.</p>";
@@ -55,49 +54,36 @@ async function loadReports(){
     }
 
     summaryDiv.innerHTML = "";
-
     reports.forEach((data, idx)=>{
       const card = document.createElement('div');
       card.className = 'report-card';
 
-      // Convert photoId to direct image URL
-      let imgHTML = '';
-      if(data["Photo ID"]){
-        imgHTML = `<img src="${JSON_URL}?imageId=${data["Photo ID"]}" alt="Lost Item">`;
+      let viewButton = '';
+      if(data["Photo URL"]){
+        viewButton = `<a href="${data["Photo URL"]}" target="_blank">
+                        <button class="view-btn">View Image</button>
+                      </a>`;
       }
 
       card.innerHTML = `<div class="report-title">Report #${idx+1}</div>
                         <div class="report-summary">${data.What || 'No description'}</div>
-                        ${imgHTML}`;
-
-      card.addEventListener('click', ()=>{
-        let html = `<h3>Report #${idx+1}</h3><ul>`;
-        for(const key in data){
-          if(key==="Photo ID" && data[key]){
-            html += `<li><strong>Photo:</strong><br><img src="${JSON_URL}?imageId=${data[key]}" style="max-width:100%;"></li>`;
-          } else {
-            html += `<li><strong>${key}:</strong> ${data[key]}</li>`;
-          }
-        }
-        html += "</ul>";
-        modalDetails.innerHTML = html;
-        modal.style.display = 'flex';
-      });
+                        ${viewButton}`;
 
       summaryDiv.appendChild(card);
     });
 
-  } catch(err){
-    console.error(err);
+  } catch(err) {
+    console.error("Error loading reports:", err);
     summaryDiv.innerHTML = "<p>Error loading reports. Try again later.</p>";
   }
 }
 
-closeModalBtn.addEventListener('click', ()=> modal.style.display='none');
-window.addEventListener('click', e=>{ if(e.target===modal) modal.style.display='none'; });
-submitAnother.addEventListener('click', ()=> window.location.href='index.html');
+// Submit another report
+submitAnother.addEventListener('click', () => window.location.href = 'index.html');
 
+// Load reports on page load
 loadReports();
 </script>
+
 </body>
 </html>
