--- a/lostreport.html
+++ b/lostreport.html
@@ -28,7 +28,7 @@
 const summaryDiv = document.getElementById('summary');
 const submitAnother = document.getElementById('submitAnother');
 
-const JSON_URL = "YOUR_APPS_SCRIPT_WEB_APP_URL_HERE"; // Palitan ng Web App URL
+const JSON_URL = "https://script.google.com/macros/s/AKfycbzL-RmRF9eo66tZNb1gf0N2oCDUrg6autPT8wW7w76CeDbGhrKyruq_EutSd4JMoLY_/exec"; // Palitan ng Web App URL
 
 async function loadReports() {
   try {
@@ -79,3 +79,4 @@ loadReports();
 
 </body>
 </html>
+
