--- a/lostreport.html
+++ b/lostreport.html
@@ -2,33 +2,45 @@
 <html>
 <head>
   <title>Lost Reports - Bravehearts Lost & Found</title>
-  <link rel="stylesheet" href="lostreport.css">
+  <style>
+    body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0; }
+    .card { background:white; max-width:900px; margin:50px auto; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2); }
+    .grid-container { display:grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap:15px; margin-top:20px; }
+    .report-card { background:#f9f9f9; border:1px solid #ccc; border-radius:8px; padding:10px; cursor:pointer; }
+    .report-card img { max-width:100%; border:2px solid #13007d; border-radius:8px; margin-top:5px; }
+    .modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; }
+    .modal-content { background:white; padding:20px; border-radius:12px; max-width:600px; max-height:80%; overflow-y:auto; position:relative; }
+    .close-btn { position:absolute; top:10px; right:10px; padding:6px 12px; border:none; border-radius:6px; background:#13007d; color:white; cursor:pointer; }
+  </style>
 </head>
 <body>
-
-<div class="video-background">
-  <video autoplay muted loop playsinline>
-    <source src="video/FAITH.mp4" type="video/mp4">
-  </video>
-</div>
-<div class="overlay"></div>
 
 <div class="card">
   <h2>All Submitted Lost Reports</h2>
   <div id="summary" class="grid-container">Loading reports...</div>
-  <button id="submitAnother">Submit Another Report</button>
+</div>
+
+<div id="reportModal" class="modal">
+  <div class="modal-content">
+    <button class="close-btn" id="closeModal">Close</button>
+    <div id="modalDetails"></div>
+  </div>
 </div>
 
 <script>
 const summaryDiv = document.getElementById('summary');
-const submitAnother = document.getElementById('submitAnother');
+const modal = document.getElementById('reportModal');
+const modalDetails = document.getElementById('modalDetails');
+const closeModalBtn = document.getElementById('closeModal');
 
-const JSON_URL = "https://script.google.com/macros/s/AKfycbzL-RmRF9eo66tZNb1gf0N2oCDUrg6autPT8wW7w76CeDbGhrKyruq_EutSd4JMoLY_/exec";
+const JSON_URL = "YOUR_APPS_SCRIPT_WEBAPP_URL"; // replace with your deployed Apps Script URL
+let reports = [];
 
+// Load reports
 async function loadReports() {
   try {
     const res = await fetch(JSON_URL);
-    const reports = await res.json();
+    reports = await res.json();
 
     if(reports.length === 0){
       summaryDiv.innerHTML = "<p>No reports submitted yet.</p>";
@@ -40,32 +52,44 @@ async function loadReports() {
       const card = document.createElement('div');
       card.className = 'report-card';
 
-      let viewButton = '';
-      if(data.Photo){
-        let driveLink = data.Photo;
-        if(!driveLink.includes("http")){
-          driveLink = "https://drive.google.com/file/d/" + data.Photo + "/view?usp=sharing";
-        }
-        viewButton = `<a href="${driveLink}" target="_blank" class="view-btn">View Image</a>`;
+      // If photo exists, generate <img> via Apps Script
+      let imgHTML = "";
+      if(data["Photo ID"]){
+        imgHTML = `<img src="${JSON_URL}?imageId=${data["Photo ID"]}" alt="Lost Item">`;
       }
 
-      card.innerHTML = `
-        <div class="report-title">Report #${idx+1}</div>
-        <div class="report-summary">${data.What || 'No description'}</div>
-        ${viewButton}
-      `;
+      card.innerHTML = `<div><strong>Report #${idx+1}</strong></div>
+                        <div>${data.What || 'No description'}</div>
+                        ${imgHTML}`;
+
+      // Click for modal details
+      card.addEventListener('click', () => {
+        let html = `<h3>Report #${idx+1}</h3><ul>`;
+        for(const key in data){
+          if(key === "Photo ID" && data[key]){
+            html += `<li><strong>Photo:</strong><br><img src="${JSON_URL}?imageId=${data[key]}" style="max-width:100%;"></li>`;
+          } else {
+            html += `<li><strong>${key}:</strong> ${data[key]}</li>`;
+          }
+        }
+        html += "</ul>";
+        modalDetails.innerHTML = html;
+        modal.style.display = 'flex';
+      });
 
       summaryDiv.appendChild(card);
     });
-
-  } catch(err) {
-    console.error("Error loading reports:", err);
-    summaryDiv.innerHTML = "<p>Error loading reports. Try again later.</p>";
+  } catch(err){
+    summaryDiv.innerHTML = "<p>Error loading reports.</p>";
+    console.error(err);
   }
 }
 
-submitAnother.addEventListener('click', () => window.location.href = 'index.html');
+// Close modal
+closeModalBtn.addEventListener('click', () => modal.style.display = 'none');
+window.addEventListener('click', e => { if(e.target === modal) modal.style.display = 'none'; });
 
+// Initialize
 loadReports();
 </script>
 
