--- a/lostreport.html
+++ b/lostreport.html
@@ -33,7 +33,7 @@ const modal = document.getElementById('reportModal');
 const modalDetails = document.getElementById('modalDetails');
 const closeModalBtn = document.getElementById('closeModal');
 
-const JSON_URL = "YOUR_APPS_SCRIPT_WEBAPP_URL"; // replace with your deployed Apps Script URL
+const JSON_URL = "https://script.google.com/macros/s/AKfycbzL-RmRF9eo66tZNb1gf0N2oCDUrg6autPT8wW7w76CeDbGhrKyruq_EutSd4JMoLY_/exec"; // replace with your deployed Apps Script URL
 let reports = [];
 
 // Load reports
@@ -95,3 +95,4 @@ loadReports();
 
 </body>
 </html>
+
